choose-product.html.tmpl 파일 번역

--- a/bugzilla/template/ko/default/global/choose-product.html.tmpl
+++ b/bugzilla/template/ko/default/global/choose-product.html.tmpl
@@ -30,14 +30,14 @@
 [% PROCESS global/variables.none.tmpl %]
 
 [% IF target == "enter_bug.cgi" %]
-  [% title = "Enter $terms.Bug" %]
-  [% subheader = BLOCK %]First, you must pick a product on which to enter [% terms.abug %]. [% END %]
+  [% title = "$terms.Bug 등록" %]
+  [% subheader = BLOCK %]먼저 [% terms.abug %](을)를 등록할 제품을 선택하세요.[% END %]
 [% ELSIF target == "describecomponents.cgi" %]
-  [% title = "$terms.Bugzilla Component Descriptions" %]
-  [% subheader = "Please specify the product whose components you want described." %]
+  [% title = "$terms.Bugzilla 구성 요소 설명" %]
+  [% subheader = "구성요소를 설명할 제품을 열거하세요." %]
 [% END %]
 
-[% DEFAULT title = "Choose a Product" %]
+[% DEFAULT title = "제품 고르기" %]
 [% PROCESS global/header.html.tmpl %]
 
 <table>
