--- a/trunk/bugzilla/template/ko/default/account/email/change-old.txt.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/email/change-old.txt.tmpl
@@ -41,5 +41,5 @@ X-Bugzilla-Type: admin
 
 [%+ urlbase %]token.cgi?t=[% token FILTER url_quote %]&a=cxlem
 
-아무것도 하지 않고, [%+ newemailaddress %] 에서 이 요청을 승인하면
+아무것도 하지 않고, [%+ newemailaddress %] 에서 이 요청을 확인하면
 [%+ max_token_age %]일 이후([%+ time2str("%B %o, %Y at %H:%M %Z", expiration_ts) %])부터 변경을 적용합니다.
