--- a/trunk/bugzilla/template/ko/default/pages/voting.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/pages/voting.html.tmpl
@@ -65,6 +65,6 @@
 자동으로 보내는 전자우편을 통해 알 수있습니다.</p>
 
 <p>페이지 꼬리말에 있는 "<a href="votes.cgi?action=show_user">My Votes</a>"
-링크를 누르면 언제든지 투표를 관찰할 수 있습니다.</p>
+링크를 누르면 언제든지 투표 상황을 재검토할 수 있습니다.</p>
 
 [% INCLUDE global/footer.html.tmpl %]
