--- a/trunk/bugzilla/template/ko/default/global/field-descs.none.tmpl
+++ b/trunk/bugzilla/template/ko/default/global/field-descs.none.tmpl
@@ -22,50 +22,50 @@
 
 [% PROCESS global/variables.none.tmpl %]
 
-[% field_descs = { "[Bug creation]"       => "[$terms.Bug creation]",
-                   "actual_time"          => "Actual Hours"
-                   "alias"                => "Alias",
-                   "assigned_to"          => "Assignee",
-                   "blocked"              => "Blocks",
+[% field_descs = { "[Bug creation]"       => "[$terms.Bug 생성]",
+                   "actual_time"          => "실제 시간"
+                   "alias"                => "별명",
+                   "assigned_to"          => "담당자",
+                   "blocked"              => "막힘",
                    "bug_file_loc"         => "URL",
                    "bug_id"               => "$terms.Bug ID",
-                   "bug_severity"         => "Severity",
-                   "bug_status"           => "Status",
-                   "changeddate"          => "Changed",
+                   "bug_severity"         => "엄격도",
+                   "bug_status"           => "상태",
+                   "changeddate"          => "변경 날짜",
                    "cc"                   => "CC",
-                   "classification"       => "Classification",
+                   "classification"       => "분류",
                    "cclist_accessible"    => "CC list accessible",
-                   "component_id"         => "Component ID",
-                   "component"            => "Component",
-                   "creation_ts"          => "$terms.Bug Creation time",
-                   "deadline"             => "Deadline",
-                   "delta_ts"             => "Changed",
-                   "dependson"            => "Depends on",
-                   "dup_id"               => "Duplicate",
-                   "estimated_time"       => "Orig. Est.",
+                   "component_id"         => "구성요소 ID",
+                   "component"            => "구성요소",
+                   "creation_ts"          => "$terms.Bug 생성 시간",
+                   "deadline"             => "마감시간",
+                   "delta_ts"             => "변경(delta_ts)",
+                   "dependson"            => "의존성",
+                   "dup_id"               => "복제",
+                   "estimated_time"       => "추측 시간(Orig. Est.)",
                    "everconfirmed"        => "Ever confirmed",
-                   "keywords"             => "Keywords",
-                   "newcc"                => "CC",
-                   "op_sys"               => "OS",
-                   "opendate"             => "Opened",
-                   "percentage_complete"  => "%Complete",
-                   "priority"             => "Priority",
-                   "product_id"           => "Product ID",
-                   "product"              => "Product",
-                   "qa_contact"           => "QA Contact",
-                   "remaining_time"       => "Hours Left",
-                   "rep_platform"         => "Hardware",
-                   "reporter"             => "Reporter",
+                   "keywords"             => "주요 단어",
+                   "newcc"                => "참조",
+                   "op_sys"               => "운영체제",
+                   "opendate"             => "열린 날짜",
+                   "percentage_complete"  => "%완료",
+                   "priority"             => "중요도",
+                   "product_id"           => "제품 ID",
+                   "product"              => "제품",
+                   "qa_contact"           => "QA 연락처",
+                   "remaining_time"       => "남은 시간",
+                   "rep_platform"         => "하드웨어",
+                   "reporter"             => "보고자",
                    "reporter_accessible"  => "Reporter accessible",
-                   "resolution"           => "Resolution",
-                   "setting"              => "Setting",
-                   "settings"             => "Settings",
-                   "short_desc"           => "Summary",
-                   "status_whiteboard"    => "Whiteboard",
-                   "target_milestone"     => "Target Milestone",
-                   "version"              => "Version",
-                   "votes"                => "Votes",
-                   "work_time"            => "Hours Worked"} %]
+                   "resolution"           => "결정",
+                   "setting"              => "설정",
+                   "settings"             => "설정",
+                   "short_desc"           => "요약",
+                   "status_whiteboard"    => "상황판",
+                   "target_milestone"     => "목표 지점",
+                   "version"              => "버전",
+                   "votes"                => "투표",
+                   "work_time"            => "일한 시간"} %]
 
 [%# Also include any custom fields or fields which don't have a
     Description here, by copying their Description from the
@@ -78,30 +78,30 @@
      IF !field_descs.${bz_field.name}.defined %]
 [% END %]
 
-[% field_types = { ${constants.FIELD_TYPE_UNKNOWN}       => "Unknown Type",
-                   ${constants.FIELD_TYPE_FREETEXT}      => "Free Text",
-                   ${constants.FIELD_TYPE_SINGLE_SELECT} => "Drop Down",
-                   ${constants.FIELD_TYPE_MULTI_SELECT}  => "Multiple-Selection Box",
-                   ${constants.FIELD_TYPE_TEXTAREA}      => "Large Text Box",
-                   ${constants.FIELD_TYPE_DATETIME}      => "Date/Time",
+[% field_types = { ${constants.FIELD_TYPE_UNKNOWN}       => "모르는 형식",
+                   ${constants.FIELD_TYPE_FREETEXT}      => "자유로운 글",
+                   ${constants.FIELD_TYPE_SINGLE_SELECT} => "늘어진 목록",
+                   ${constants.FIELD_TYPE_MULTI_SELECT}  => "다중 선택 상자",
+                   ${constants.FIELD_TYPE_TEXTAREA}      => "큰 글 상자",
+                   ${constants.FIELD_TYPE_DATETIME}      => "날짜/시간",
                 } %]
 
-[% status_descs = { "UNCONFIRMED" => "UNCONFIRMED",
-                    "NEW"         => "NEW",
-                    "ASSIGNED"    => "ASSIGNED",
-                    "REOPENED"    => "REOPENED",
-                    "RESOLVED"    => "RESOLVED",
-                    "VERIFIED"    => "VERIFIED",
-                    "CLOSED"      => "CLOSED" } %]
+[% status_descs = { "UNCONFIRMED" => "미확인",
+                    "NEW"         => "새로운 버그",
+                    "ASSIGNED"    => "할당함",
+                    "REOPENED"    => "새로 열림",
+                    "RESOLVED"    => "결심함",
+                    "VERIFIED"    => "검증함",
+                    "CLOSED"      => "닫음" } %]
 
 [% MACRO get_status(status) GET status_descs.$status || status %]
 
-[% resolution_descs = { "FIXED"      => "FIXED",
-                        "INVALID"    => "INVALID",
-                        "WONTFIX"    => "WONTFIX",
-                        "DUPLICATE"  => "DUPLICATE",
-                        "WORKSFORME" => "WORKSFORME",
-                        "MOVED"      => "MOVED",
+[% resolution_descs = { "FIXED"      => "끝냄",
+                        "INVALID"    => "무효",
+                        "WONTFIX"    => "끝내지 않을것음",
+                        "DUPLICATE"  => "복제",
+                        "WORKSFORME" => "내게만 발생함",
+                        "MOVED"      => "옮김",
                         "---"        => "---",
                         " "          => " " } %]
 
