--- a/trunk/bugzilla/template/ko/default/global/hidden-fields.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/global/hidden-fields.html.tmpl
@@ -36,14 +36,14 @@
   [% IF field == "data" && cgi.param("data") %]
     <div class="box">
       <p>
-        We were unable to store the file you uploaded because of incomplete information
-        in the form you just submitted. Because we are unable to retain the file between
-        form submissions, you must re-attach the file in addition to completing the
-        remaining missing information above.
+        제출한 입력 서식의 내용이 완전하지 않기 때문에
+        올리신 파일을 저장할 수 없습니다.
+        입력 서식의 제출을 통한 파일을 유지하지 못하므로
+        위에서 빠뜨린 정보를 기입할 때 파일을 다시 첨부해야 합니다.
       </p>
       <p>
-        Please re-attach the file <b>[% cgi.param(field) FILTER html %]</b> in
-        the field below:
+        아래의 항목에 <b>[% cgi.param(field) FILTER html %]</b>
+        파일을 새로 첨부하세요:
       </p>
       <p>
         <input type="file" id="data" name="data" size="50">
