field-descs.none.tmpl: 생성 -> 만들기

--- a/bugzilla/template/ko/default/global/field-descs.none.tmpl
+++ b/bugzilla/template/ko/default/global/field-descs.none.tmpl
@@ -22,7 +22,7 @@
 
 [% PROCESS global/variables.none.tmpl %]
 
-[% field_descs = { "[Bug creation]"       => "[$terms.Bug 생성]",
+[% field_descs = { "[Bug creation]"       => "[$terms.Bug 만들기]",
                    "actual_time"          => "실제 시간"
                    "alias"                => "별명",
                    "assigned_to"          => "담당자",
@@ -37,7 +37,7 @@
                    "cclist_accessible"    => "CC list accessible",
                    "component_id"         => "구성요소 ID",
                    "component"            => "구성요소",
-                   "creation_ts"          => "$terms.Bug 생성 시간",
+                   "creation_ts"          => "$terms.Bug 만든 시간",
                    "deadline"             => "마감시간",
                    "delta_ts"             => "변경(delta_ts)",
                    "dependson"            => "의존성",
