welcome-admin.html.tmpl 파일 번역 문장 매끄럽게 고침(아직 어색함)

--- a/bugzilla/template/ko/default/welcome-admin.html.tmpl
+++ b/bugzilla/template/ko/default/welcome-admin.html.tmpl
@@ -30,23 +30,23 @@
 <div id="welcome-admin">
   <p>[% user.identity FILTER html %]님, 환영합니다.</p>
 
-  <p>이 페이지는 아직 핵심 매개변수들이 설정되지 않았을 때 출력됩니다.
-  이 페이지의 목적은 설치를 올바르게 마치기 위한 마지막 단계들을 알려주는 데 있습니다.</p>
+  <p>이 화면은 아직 핵심 매개변수들를 설정하지 않았을 때 볼 수 있습니다.
+  설치를 올바르게 마치기 위한 마지막 단계를 이곳에서 확인하세요.</p>
 
-  <p>관리자에게는 관리를 위한 링크들이 현재 페이지의 끝에 생성됩니다.
-  이 링크들은 어느 페이지에서나 존재할 것입니다. 이들 링크 중에는, 적어도 한번은 반드시
-  방문해야하는 <a href="editparams.cgi">매개변수</a> 페이지도 있습니다.
-  이 페이지에서 설치를 위한 모든 중요한 매개변수들을 설정할 수 있습니다.
+  <p>관리자는 현재 화면의 끝에 관리용 링크를 볼 수 있습니다.
+  이 링크는 어느 페이지나 존재합니다. 링크 중에는 적어도 한번은 반드시
+  방문해야하는 <a href="editparams.cgi">매개변수</a> 곳도 있습니다.
+  설치시 필요한 중요한 모든 매개변수를 이곳에서 설정할 수 있습니다.
   By clicking this link, you will be able to set among others:</p>
 
   <ul>
     <li><a href="editparams.cgi?section=core#maintainer">maintainer</a>는 설치가
     의 잘못되었을 때 책임이 갖는 사람입니다.</li>
 
-    <li><a href="editparams.cgi?section=core#urlbase">urlbase</a>는 설치 페이지로
-    연결되는 URL입니다. 또한 전자우편에 사용될 수도 있습니다. (이것은 또한 당신이 이 페이지를
-    보게되는 이유이기도 합니다: 이 매개변수가 설정되지 않으면, 계속 이 페이지를 보게 될
-    것입니다)</li>
+    <li><a href="editparams.cgi?section=core#urlbase">urlbase</a>는
+    설치 페이지 URL입니다. 또한 전자우편에 사용될 수도 있습니다.
+    (이것은 또한 당신이 이 페이지를 보게되는 이유이기도 합니다:
+    이 매개변수가 설정되지 않으면, 계속 이 페이지를 보게 될 것입니다)</li>
 
     <li><a href="editparams.cgi?section=core#cookiepath">cookiepath</a>는
     당신의 브라우저가 쿠키를 제대로 관리하기 위해 중요합니다.</li>
