variables.none.tmpl 번역

--- a/bugzilla/template/ko/default/global/variables.none.tmpl
+++ b/bugzilla/template/ko/default/global/variables.none.tmpl
@@ -28,14 +28,14 @@
   #%]
 
 [% terms = {
-  "bug" => "bug",
-  "Bug" => "Bug",
-  "abug" => "a bug",
-  "Abug" => "A bug",
-  "ABug" => "A Bug",
-  "bugs" => "bugs",
-  "Bugs" => "Bugs",
-  "zeroSearchResults" => "Zarro Boogs found",
-  "Bugzilla" => "Bugzilla"
+  "bug" => "버그",
+  "Bug" => "버그",
+  "abug" => "버그",
+  "Abug" => "버그",
+  "ABug" => "버그",
+  "bugs" => "버그",
+  "Bugs" => "버그",
+  "zeroSearchResults" => "발견한 버그 없음",
+  "Bugzilla" => "버그질라"
   }
 %]
