--- a/trunk/bugzilla/template/ko/default/list/change-columns.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/list/change-columns.html.tmpl
@@ -21,7 +21,7 @@
 [% PROCESS global/variables.none.tmpl %]
 
 [% PROCESS global/header.html.tmpl
-  title = "Change Columns"
+  title = "표시 항목 변경"
 %]
 
 <p>
@@ -32,9 +32,9 @@
 [% PROCESS "global/field-descs.none.tmpl" %]
 [% field_descs.short_short_desc     = "요약 (첫 60 글자)" %]
 [% field_descs.short_desc           = "요약 전문" %]
-[% field_descs.assigned_to_realname = "담당자의 진짜 이름" %]
-[% field_descs.reporter_realname    = "보고자의 진짜 이름" %]
-[% field_descs.qa_contact_realname  = "QA 연락처의 진짜 이름" %]
+[% field_descs.assigned_to_realname = "담당자 진짜 이름" %]
+[% field_descs.reporter_realname    = "보고자 진짜 이름" %]
+[% field_descs.qa_contact_realname  = "QA 연락처 진짜 이름" %]
 
 <form action="colchange.cgi">
   <input type="hidden" name="rememberedquery" value="[% buffer FILTER html %]">
