--- a/bugzilla/template/ko/default/list/table.html.tmpl
+++ b/bugzilla/template/ko/default/list/table.html.tmpl
@@ -39,26 +39,26 @@
 
 [% abbrev = 
   {
-    "bug_severity"         => { maxlength => 3 , title => "Sev" } , 
-    "priority"             => { maxlength => 3 , title => "Pri" } , 
-    "rep_platform"         => { maxlength => 3 , title => "Plt" } , 
-    "bug_status"           => { maxlength => 4 } , 
+    "bug_severity"         => { maxlength => 0 } , 
+    "priority"             => { maxlength => 0 } , 
+    "rep_platform"         => { maxlength => 0 } , 
+    "bug_status"           => { maxlength => 0 } , 
     "assigned_to"          => { maxlength => 30 , ellipsis => "..." } , 
     "assigned_to_realname" => { maxlength => 20 , ellipsis => "..." } , 
     "reporter"             => { maxlength => 30 , ellipsis => "..." } , 
     "reporter_realname"    => { maxlength => 20 , ellipsis => "..." } , 
-    "qa_contact"           => { maxlength => 30 , ellipsis => "..." , title => "QAContact" } , 
-    "qa_contact_realname"  => { maxlength => 20 , ellipsis => "..." , title => "QAContact" } , 
-    "resolution"        => { maxlength => 4 } , 
+    "qa_contact"           => { maxlength => 30 , ellipsis => "..." } , 
+    "qa_contact_realname"  => { maxlength => 20 , ellipsis => "..." } , 
+    "resolution"        => { maxlength => 0 } , 
     "short_desc"        => { wrap => 1 } ,
     "short_short_desc"  => { maxlength => 60 , ellipsis => "..." , wrap => 1 } ,
-    "status_whiteboard" => { title => "Whiteboard" , wrap => 1 } , 
+    "status_whiteboard" => { wrap => 1 } , 
     "keywords"          => { wrap => 1 } ,
-    "component"         => { maxlength => 8 , title => "Comp" } , 
-    "product"           => { maxlength => 8 } , 
-    "version"           => { maxlength => 5 , title => "Vers" } , 
-    "op_sys"            => { maxlength => 4 } , 
-    "target_milestone"  => { title => "TargetM" } , 
+    "component"         => { maxlength => 0 } , 
+    "product"           => { maxlength => 0 } , 
+    "version"           => { maxlength => 0 } , 
+    "op_sys"            => { maxlength => 0 } , 
+    "target_milestone"  => { } , 
     "percentage_complete" => { format_value => "%d %%" } , 
   }
 %]
