--- a/trunk/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
@@ -23,7 +23,7 @@
 
 [% PROCESS global/variables.none.tmpl %]
 
-[% dontchange = "--do_not_change--" %]
+[% dontchange = "--변경안함--" %]
 <input type="hidden" name="dontchange" value="[% dontchange FILTER html %]">
 
 <script type="text/javascript">
@@ -44,7 +44,7 @@
 <p style="font-size:smaller">
  여러 개의 [% terms.bugs %] 변경:</p>
 <ol style="font-size:smaller">
-  <li>위에서 변경하기를 원하는 [% terms.bugs %] 을/를 체크하세요.</li>
+  <li>위에서 변경하기를 원하는 [% terms.bugs %]를 체크하세요.</li>
   <li>아래 칸에 변경할 내용을 넣으세요.
    변경할 내용에 대한 설명이 필요하면 의견란에 기입하세요.</li>
   <li><em>확인</em> 버튼을 누르세요.</li>
