choose-product.html.tmpl: 필요없는 조사를 뺌

--- a/bugzilla/template/ko/default/global/choose-product.html.tmpl
+++ b/bugzilla/template/ko/default/global/choose-product.html.tmpl
@@ -31,7 +31,7 @@
 
 [% IF target == "enter_bug.cgi" %]
   [% title = "$terms.Bug 등록" %]
-  [% subheader = BLOCK %]먼저 [% terms.abug %](을)를 등록할 제품을 선택하세요.[% END %]
+  [% subheader = BLOCK %]먼저 [% terms.abug %]를 등록할 제품을 선택하세요.[% END %]
 [% ELSIF target == "describecomponents.cgi" %]
   [% title = "$terms.Bugzilla 구성 요소 설명" %]
   [% subheader = "구성요소를 설명할 제품을 열거하세요." %]
