--- a/trunk/bugzilla/template/ko/default/global/confirm-user-match.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/global/confirm-user-match.html.tmpl
@@ -59,7 +59,7 @@
       <br>아래의 가능성 있는 검색 결과를 점검하고 선택하세요.
     [% ELSE %]
       이름과 전자우편 주소의 일부를 입력할 때 검증을 하도록
-      [% terms.Bugzilla %](을)를 설정한 상태입니다.
+      [% terms.Bugzilla %]를 설정한 상태입니다.
       <br>아래는 입력한 이름과 주소며, 일치하는 사용자입니다.
       이 정보가 맞는지 확인하세요.
     [% END %]
