--- a/trunk/bugzilla/template/ko/default/account/create.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/account/create.html.tmpl
@@ -52,7 +52,7 @@
 [% IF Param('createemailregexp') == '.*' && Param('emailsuffix') == '' %]
 <p>
   <b>개인정보 알림:</b>
-  [% terms.Bugzilla %](은)는 열린 [% terms.bug %] 추적 시스템입니다.
+  [% terms.Bugzilla %]는 열린 [% terms.bug %] 추적 시스템입니다.
   [% terms.bugs %]에서의 활동은 전자우편 주소를 포함해 외부에서 볼 수 있습니다.
   따라서 부가적인 계정이나 무료 전자우편 서비스 (Gmail, Yahoo, Hotmail 등)를
   사용해서 중요한 전자우편 주소에 스팸이 오는 것을 막는것이 <b>좋습니다</b>.
