sudo.html.tmpl: 필요없는 조사를 뺌

--- a/bugzilla/template/ko/default/pages/sudo.html.tmpl
+++ b/bugzilla/template/ko/default/pages/sudo.html.tmpl
@@ -33,7 +33,7 @@
   이 기능은 특히 테스트를 할 때나,
   대역 사용자로는 가능하지 않은 위험한 작업을 할때 유용합니다.
 
-  다른 사용자인 척하는 시점에 [% terms.Bugzilla %](은)는
+  다른 사용자인 척하는 시점에 [% terms.Bugzilla %]는
   대역 사용자에게 전자우편을 보낼 것입니다;
   전자우편에는 단지 위의 내용만 들어갑니다.
 </p>
