setting-descs.none.tmpl 번역

--- a/bugzilla/template/ko/default/global/setting-descs.none.tmpl
+++ b/bugzilla/template/ko/default/global/setting-descs.none.tmpl
@@ -19,29 +19,30 @@
 [% PROCESS global/variables.none.tmpl %]
 
 [% setting_descs = { 
-   "comment_sort_order"               => "When viewing $terms.abug, show comments in this order",
-   "csv_colsepchar"                   => "Field separator character for CSV files",
-   "display_quips"                    => "Show a quip at the top of each $terms.bug list",
-   "zoom_textareas"                   => "Zoom textareas large when in use (requires JavaScript)",
-   "newest_to_oldest"                 => "Newest to Oldest",
-   "newest_to_oldest_desc_first"      => "Newest to Oldest, but keep Description at the top",
-   "off"                              => "Off",
-   "oldest_to_newest"                 => "Oldest to Newest",
-   "on"                               => "On",
-   "per_bug_queries"                  => "Enable tags for $terms.bugs",
-   "post_bug_submit_action"           => "After changing $terms.abug",
-   "next_bug"                         => "Show next $terms.bug in my list",
-   "same_bug"                         => "Show the updated $terms.bug",
-   "standard"                         => "Classic",
-   "skin"                             => "$terms.Bugzilla's general appearance (skin)",
-   "nothing"                          => "Do Nothing",
-   "state_addselfcc"                  => "Automatically add me to the CC list of $terms.bugs I change",
-   "always"                           => "Always",
-   "never"                            => "Never",
-   "cc_unless_role"                   => "Only if I have no role on them",
-   "lang"                             => "Language used in email",
+   "comment_sort_order"               => "$terms.abug를 보여줄때 이 순서로 의견 보여주기",
+   "csv_colsepchar"                   => "CSV 파일 항목 구분자",
+   "display_quips"                    => "$terms.bug 목록 위쪽에 가벼운 글귀 보여주기",
+   "zoom_textareas"                   => "글상자를 사용할때 확대하기 (자바스크립트 필요)",
+   "newest_to_oldest"                 => "새로운 것에서 오래된 것으로",
+   "newest_to_oldest_desc_first"      => "새로운 것에서 오래된 것으로, 하지만 설명은 제일 위로",
+   "off"                              => "끔",
+   "oldest_to_newest"                 => "오래된 것에서 새로운 것으로",
+   "on"                               => "켬",
+   "per_bug_queries"                  => "$terms.bugs에서 태그를 사용할 수 있게함",
+   "post_bug_submit_action"           => "$terms.abug를 변경한 후에",
+   "next_bug"                         => "내 목록에서 다음 $terms.bug 보기",
+   "same_bug"                         => "갱신한 $terms.bug 보기",
+   "standard"                         => "고전",
+   "skin"                             => "$terms.Bugzilla의 일반적인 모습 (스킨)",
+   "nothing"                          => "아무것도 안함",
+   "state_addselfcc"                  => "내가 변경한 $terms.bugs의 참조 목록에 자동으로 더하기",
+   "always"                           => "언제나",
+   "never"                            => "절대 아님",
+   "cc_unless_role"                   => "그것에 내 역할이 없을 때만",
+   "lang"                             => "전자우편에서 사용할 언어",
    "quote_replies"                    => "Quote the associated comment when you click on its reply link",
-   "quoted_reply"                     => "Quote the full comment",
-   "simple_reply"                     => "Reference the comment number only",
+   "quote_replies"                    => "의견의 답장 링크를 누르면 의견을 인용함",
+   "quoted_reply"                     => "의견 전체를 인용함",
+   "simple_reply"                     => "의견 번호만 참조함",
                    } 
 %]
