*   많은 글을 넣을 수 있게함     -   .text 태그 지원     -   텍스트 태그 지원을 위해 css 변경     -   index.txt에 .text 예제 추가 *   .*.swp 파일 버전관리 하지않음

--- a/slide/mkslide/slide.css
+++ b/slide/mkslide/slide.css
@@ -3,6 +3,9 @@
     width:    100%;
     height:   640px;
 }
+p{
+    font-size:130%;
+}
 body{
     font-size:100%;
     background-color: #C4D6E2;
@@ -21,7 +24,7 @@ body{
 .screen pre {
   border: dotted 1px;
   text-align: left;
-  font-size:75%;
+  font-size:70%;
   color: #0F0;
   background-color:#000;
   overflow: auto;
