--- a/trunk/www-framework/kpw/template/tt/default/register.html
+++ b/trunk/www-framework/kpw/template/tt/default/register.html
@@ -1,6 +1,3 @@
-
- [% INCLUDE "_include/www_head.html" %]
-
-  blahblah
- [% INCLUDE "_include/sponsors.html" %]
- [% INCLUDE "_include/www_foot.html" %]
+            <div class="content_block">
+              <h1>Registration</h1>
+	    </div>
