contents 상단 박스 이미지 색상 변경 및 배경 투명으로 변경

--- a/trunk/www/kpw2008/css/style.css
+++ b/trunk/www/kpw2008/css/style.css
@@ -149,7 +149,7 @@ div.box {
 }
 div.box_top {
         height: 30px;
-        background: transparent url(../images/box_top.gif) no-repeat scroll center bottom !important;
+        background: transparent url(../images/box_top.png) no-repeat scroll center bottom !important;
 }
 div.box_middle {
         background: transparent url(../images/box_middle.png) repeat-y scroll center top !important;
