contents의 box bottom 이미지 테두리를 투명으로 변경

--- a/trunk/www/kpw2008/css/style.css
+++ b/trunk/www/kpw2008/css/style.css
@@ -156,7 +156,7 @@ div.box_middle {
 }
 div.box_bottom {
         height: 150px;
-        background: transparent url(../images/box_bottom.gif) no-repeat scroll center top !important;
+        background: transparent url(../images/box_bottom.png) no-repeat scroll center top !important;
 }
 
 /* Content Text */
